netowrk/nginx-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  labels:
    app: nginx1
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
