netowrk/nginx-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels:
    app: nginx2
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
